Finished the project

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-    
+    <h1>Odin Recipes</h1>
+    <a href="Recipes/sweet-potato.html">Sweet Potato</a>
+    <a href="Recipes/chickhen.html">Fried chickhen</a>
+    <a href="Recipes/shake.html">Milk Shake</a>
 </body>
 
 </html>
